# embassy-pico-mano

./: Cargo.toml  diagramme
.cargo/: config.toml
src/: display.rs  main.rs  touch.rs
