[package]
name = "embassy-pico-mano"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-rp = { version = "0.9.0", features = [
    "defmt",
    "rp2040",
    "time-driver",
    "critical-section-impl",
    "boot2-w25q080",
] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }

defmt = { version = "1.0", features = ["encoding-raw"] }
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
static_cell = "2.1.1"
portable-atomic = { version = "1.5.1", features = ["critical-section"] }

mipidsi = "0.9.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"
micromath = "2.1.0"

[profile.release]
debug = 2
lto = true
opt-level = 's'

[profile.dev]
debug = 2
lto = true
opt-level = 's'
